--- a/Readme
+++ b/Readme
@@ -1,14 +1,14 @@
-ONVIF Implementation Project for Jetson Nano
+# ONVIF Implementation Project for Jetson Nano
 
 This project is an implementation of the ONVIF protocol for Jetson Nano, with the aim of discovering, connecting, and receiving video data from ONVIF-compliant cameras. The project includes a C/C++ client application that communicates with the cameras using the ONVIF protocol.
 
-Prerequisites
+## Prerequisites
 
 - Jetson Nano development kit with JetPack installed
 - ONVIF-compliant cameras connected to the network
 - ONVIF client library (such as ONVIF Device Manager) installed on the Jetson Nano
 
-Installation and Usage
+## Installation and Usage
 
 1. Clone the repository to your local machine: `git clone https://github.com/yourusername/onvif-jetson.git`
 2. Navigate to the project directory: `cd onvif-jetson`
@@ -17,7 +17,7 @@ Installation and Usage
 
 The client application will automatically discover any ONVIF-compliant cameras on the network and display their details, including their IP addresses, MAC addresses, and ONVIF profiles. You can then choose to connect to a camera and receive video data from it.
 
-Configuration
+## Configuration
 
 The client application can be configured using the `config.ini` file, which is located in the project directory. This file contains the following options:
 
@@ -25,14 +25,14 @@ The client application can be configured using the `config.ini` file, which is l
 - `discovery_timeout`: the timeout (in seconds) for ONVIF discovery requests
 - `username` and `password`: the credentials to use for connecting to the ONVIF devices
 
-License
+## License
 
 This project is licensed under the MIT License. See the `LICENSE` file for more details.
 
-Acknowledgments
+## Acknowledgments
 
 This project was inspired by the ONVIF Device Manager project and uses the ONVIF client library provided by that project. Special thanks to the developers of ONVIF Device Manager for their contributions to the ONVIF community.
 
-Contributing
+## Contributing
 
 If you have any suggestions, bug reports, or feature requests, please feel free to open an issue or submit a pull request. We welcome contributions from the community and will review them as soon as possible.
